--- a/mfig_example.ipynb
+++ b/mfig_example.ipynb
@@ -20,20 +20,21 @@
    "source": [
     "import mfig\n",
     "\n",
-    "mfig.init(origin=\"leftbottom\", aspect=\"landscape\", max=6.5)\n",
+    "mfig.init()\n",
     "\n",
     "mfig.vec(3, 1,'red')\n",
     "mfig.vec(5, 6,'blue')\n",
     "\n",
-    "mfig.vec2(3+0.2,1+0.2,5+0.2,6-0.2,'#aaaaaa')\n",
+    "mfig.vec2(3+0.2, 1+0.2, 5+0.2, 6-0.2,'#aaaaaa')\n",
     "\n",
     "mfig.dot(3, 1)\n",
     "mfig.dot(5, 6)\n",
     "\n",
     "mfig.text(3.5, 1, \"P(3,1)\", 'xx-large')\n",
-    "mfig.text(5.5, 5.5, \"P´(5,6)\", 'xx-large')\n",
+    "mfig.text(5.5, 5.5, \"P'(5,6)\", 'xx-large')\n",
     "\n",
-    "mfig.show()\n"
+    "mfig.show()\n",
+    "\n"
    ]
   }
  ],
